Tue Jul 17 23:50:43 CEST 2012
	Stylistic code clean up.  Allowing lookup up of trailing values
	without keys using "MHD_lookup_connection_value" with a key of NULL
	(thus achieving consistency with the existing iterator API). -CG

Tue Jul 17 22:37:05 CEST 2012
	Adding experimental (!) code for MHD operation without listen socket. -CG

Tue Jul 17 22:15:57 CEST 2012
	Making sendfile test pass again on non-W32 systems. -CG

Mon Jul  9 13:43:35 CEST 2012
	Misc changes to allow testcases to pass on W32. -LRN

Sun Jul  8 15:05:31 CEST 2012
	Misc changes to fix build on W32. -LRN

Fri Jun 22 11:31:25 CEST 2012
	Make sure sockets opened by MHD are non-inheritable by default (#2414). -CG

Tue Jun 19 19:44:53 CEST 2012
	Change various uses of time(NULL) to new MHD_monotonic_time() function to
	make timeouts immune to the system real time clock changing. -MC

Tue Jun 12 21:35:00 CEST 2012
	Adding 451 status code. -CG

Thu May 31 13:33:45 CEST 2012
	Releasing 0.9.20. -CG

Tue May 29 13:55:03 CEST 2012
	Fixed some testcase build issues with disabled post processor. -CG

Tue May 29 13:45:15 CEST 2012
	Fixing bug where MHD failed to call connection termination callback
	if a connection either was closed due to read errors or if MHD
	was terminated with certain threading models.  Added new
	termination code MHD_REQUEST_TERMINATED_READ_ERROR for the
	read-termination cause. -CG

Thu Mar 15 23:47:53 CET 2012
	Eliminating code clone in tls connection read/write handlers. -CG

Fri Mar  2 23:44:56 CET 2012
	Making sure that MHD_get_connection_values iterates over the
	headers in the order in which they were received. -CG

Wed Feb  1 09:39:12 CET 2012
	Fixed compilation problem on MinGW. -BS

Tue Jan 31 17:50:24 CET 2012
	Releasing 0.9.19. -CG

Mon Jan 30 20:02:34 CET 2012
	Fixed handling of garbage prior to first multipart boundary
	(#2126). -woof

Fri Jan 27 11:00:43 CET 2012
	Fixed postprocessor failure for applications that enclosed boundary
	in quotes (#2120). -woof
